force-app/main/default/objects/Guest__c/fields/AcceptedByHost__c.field-meta.xml
<CustomField>
    <fullName>AcceptedByHost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AcceptedByHost</label>
    <type>Checkbox</type>
</CustomField>