force-app/main/default/objects/Guest__c/fields/Check_out__c.field-meta.xml
<CustomField>
    <fullName>Check_out__c</fullName>
    <label>Check out</label>
    <type>DateTime</type>
</CustomField>