force-app/main/default/objects/Guest__c/fields/External_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Picture_URL__c</fullName>
    <defaultValue>&quot;https://3.bp.blogspot.com/-KIngJEZr94Q/Wsxoh-8kwuI/AAAAAAAAQyM/YlDJM1eBvzoDAUV79-0v_Us-amsjlFpkgCLcBGAs/s1600/aaa.jpg&quot;</defaultValue>
    <label>External Picture URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>