force-app/main/default/objects/Guest__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>Firstname</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>