force-app/main/default/objects/Guest__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>