force-app/main/default/objects/Guest__c/fields/HostFirstName__c.field-meta.xml
<CustomField>
    <fullName>HostFirstName__c</fullName>
    <formula>Host__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HostFirstName</label>
    <type>Text</type>
</CustomField>