force-app/main/default/objects/Guest__c/fields/NotifyVisitor__c.field-meta.xml
<CustomField>
    <fullName>NotifyVisitor__c</fullName>
    <label>NotifyVisitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My secretary is coming to let you in.</fullName>
            </value>
            <value>
                <fullName>I&#39;m five minutes late but will soon be there to pick you up. My apologies.</fullName>
            </value>
            <value>
                <fullName>I&#39;m on my way to let you in.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>