force-app/main/default/objects/Guest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT RECEPTION</fullName>
                <default>true</default>
                <label>AT RECEPTION</label>
            </value>
            <value>
                <fullName>BADGE ISSUED</fullName>
            </value>
            <value>
                <fullName>RETRIEVED BY HOST</fullName>
            </value>
            <value>
                <fullName>BADGE RETURNED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>