force-app/main/default/objects/Guest__c/fields/webuser__c.field-meta.xml
<CustomField>
    <fullName>webuser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>webuser</label>
    <referenceTo>webusers__c</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>