force-app/main/default/objects/Guest__c/recordTypes/Complete_Data.recordType-meta.xml
<RecordType>
    <fullName>Complete_Data</fullName>
    <active>true</active>
    <label>Complete Data</label>
</RecordType>