force-app/main/default/objects/Guest__c/recordTypes/Simple_Data.recordType-meta.xml
<RecordType>
    <fullName>Simple_Data</fullName>
    <active>true</active>
    <label>Simple Data</label>
</RecordType>