force-app/main/default/objects/Guest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Firstname__c</columns>
    <columns>Lastname__c</columns>
    <columns>NAME</columns>
    <columns>Host__c</columns>
    <columns>AcceptedByHost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>